// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Radio rtl render component should be rendered correctly in RTL direction 1`] = `
<label
  class="g-radio-wrapper g-radio-wrapper-rtl css-var-root g-radio-css-var"
>
  <span
    class="g-radio g-wave-target"
  >
    <input
      class="g-radio-input"
      type="radio"
    />
  </span>
</label>
`;

exports[`Radio rtl render component should be rendered correctly in RTL direction 2`] = `
<div
  class="g-radio-group g-radio-group-outline g-radio-group-rtl css-var-root g-radio-css-var"
  role="radiogroup"
/>
`;

exports[`Radio rtl render component should be rendered correctly in RTL direction 3`] = `
<label
  class="g-radio-button-wrapper g-radio-button-wrapper-rtl css-var-root g-radio-css-var"
>
  <span
    class="g-radio-button"
  >
    <input
      class="g-radio-button-input"
      type="radio"
    />
  </span>
</label>
`;

exports[`Radio should render correctly 1`] = `
<label
  class="g-radio-wrapper customized css-var-root g-radio-css-var"
>
  <span
    class="g-radio g-wave-target"
  >
    <input
      class="g-radio-input"
      type="radio"
    />
  </span>
  <span
    class="g-radio-label"
  >
    Test
  </span>
</label>
`;
